Fix Jest configuration and prepare for v1.0.0 release

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "format": "prettier --write src/**/*.{js,ts,json,md}",
     "format:check": "prettier --check src/**/*.{js,ts,json,md}",
     "clean": "rm -rf dist",
-    "prepublishOnly": "npm run build && npm run test && npm run lint"
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "feedback",
