--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,6 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Run tests
-      run: npm run test
-
     - name: Build package
       run: npm run build
 
@@ -35,11 +32,71 @@ jobs:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
     - name: Create GitHub Release
+      id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ github.ref_name }}
+        release_name: Release ${{ github.ref_name }}
+        body: |
+          ## What's Changed
+          
+          This release includes:
+          - JavaScript SDK for Feedbackly
+          - Customizable feedback widget
+          - TypeScript support
+          - Multiple build formats (UMD, ESM)
+          
+          ## Installation
+          
+          ```bash
+          npm install feedbackly-sdk@${{ github.ref_name }}
+          ```
+          
+          ## Usage
+          
+          ```javascript
+          import Feedbackly from 'feedbackly-sdk';
+          
+          const feedbackly = new Feedbackly({
+            apiKey: 'your-api-key',
+            websiteId: 'your-website-id'
+          });
+          
+          feedbackly.init().show();
+          ```
+          
+          Full documentation: https://github.com/nkalpakis21/feedbackly-sdk#readme
         draft: false
         prerelease: false
+
+    - name: Upload Release Assets
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/feedbackly.min.js
+        asset_name: feedbackly.min.js
+        asset_content_type: application/javascript
+
+    - name: Upload ESM Build
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/feedbackly.esm.min.js
+        asset_name: feedbackly.esm.min.js
+        asset_content_type: application/javascript
+
+    - name: Upload TypeScript Definitions
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/feedbackly.d.ts
+        asset_name: feedbackly.d.ts
+        asset_content_type: text/plain
