--- a/package.json
+++ b/package.json
@@ -56,10 +56,11 @@
   },
   "homepage": "https://github.com/nkalpakis21/feedbackly-sdk#readme",
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.4",
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.1.5",
+    "babel-jest": "^30.1.2",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "eslint": "^8.56.0",
