--- a/package.json
+++ b/package.json
@@ -99,8 +99,8 @@
       "prettier --write"
     ]
   },
-  "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+  "peerDependencies": {
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   }
 }
