--- a/.prettierrc
+++ b/.prettierrc
@@ -5,8 +5,7 @@
   "printWidth": 80,
   "tabWidth": 2,
   "useTabs": false,
-  "bracketSpacing": true,
+  "bracketSpacing": false,
   "arrowParens": "avoid",
   "endOfLine": "lf"
 }
-
